# PertAL

./: .gitignore  LLM_prior_generator.py  README.md  main.py  pyproject.toml  requirements-cuda.txt  requirements.txt  run.py
data/: Prior_kernel_preprocess.ipynb
llm/: LLM_prior_extractor_async.py  LLM_prior_judge_async.py
pertal/: data_pert.py  nets_pert.py  pertal.py  utils.py
pertal/AL_strategies/: __init__.py  active_learning.py  registry.py  strategy.py
pertal/bmdal/: algorithms.py  selection.py
pertal/gears/: data_utils.py  gears.py  inference.py  pertdata.py  utils.py
pertal/scoring/: __init__.py  base.py  gradient.py  llm.py
run/conf/: config.yaml
run/conf/dataset/: adamson_k562.yaml  replogle_k562.yaml  replogle_rpe1.yaml
run/conf/dir/: default.yaml
run/conf/llm/: gpt41-mini.yaml
run/conf/model/: gears.yaml
run/conf/strategy/: pertal.yaml
run/pipeline/: train.py
