[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"





[project]
name = "pertal"
version = "0.1.0"
description = "PertAL: Active learning framework for low-budget single-cell perturbation screening"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "bmdal-reg>=3.0.2",
    "cell-gears>=0.1.2",
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "scanpy==1.9.8",
    "swankit>=0.2.4",
    "swanlab>=0.7.11",
    "torch-geometric==2.6.1",
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "torchvision==0.19.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
hydra = ["hydra-core>=1.3"]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["pertal*"]
